# pulse-event-ops

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  snips.txt
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: architecture.md  mvp-spec.md  roadmap.md
migrations/: 0001_create_events.sql  0002_acknowledge_and_updates.sql
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: constants.dart  main.dart
mobile/lib/models/: event_model.dart
mobile/lib/screens/: recent_events_screen.dart  report_event_screen.dart
mobile/lib/services/: api_service.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/test/: widget_test.dart
mobile/test/models/: event_model_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: main.cpp  (+1 more)
phases/sprints/: phases_and_sprints.md  sprints.md
prompts/: orchestrator_prompt.md  plan_prompt.md
src/: config.rs  lib.rs  main.rs
src/api/: dashboard.rs  events.rs  health.rs  mod.rs  router.rs  sse.rs  state.rs
src/application/: events.rs
src/domain/: event.rs  event_update.rs  mod.rs  sse_event.rs
src/infrastructure/: db.rs  event_repo.rs  mod.rs  update_repo.rs
templates/: events_detail.html  events_feed.html  layout.html
templates/partials/: event_list.html  timeline.html
tests/: events_test.rs  gate11_mobile_api.py  health_test.rs
(+49 files in other folders)
