[package]
name = "pulse-event-ops"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulse_event_ops"
path = "src/lib.rs"

[[bin]]
name = "pulse-event-ops"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
